# getting-started-with-rust-wasm

./: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  package.json  rust-toolchain.toml  webpack.config.js  webpack.config.mjs
.codesandbox/: DOCKERFILE  Dockerfile  tasks.json
public/bundler/: index.html  index.js
public/node/: index.mjs
src/: bundler.html  bundler.js  deno.ts  index.mjs  lib.rs
