[package]
name = "getting_started_with_rust_wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://grafbase.com/blog"
repository = "https://github.com/grafbase/getting-started-with-rust-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
## optionally uncomment for web use:
# web-sys = { version = "0.3", features = [
#     'Document',
#     'Element',
#     'HtmlElement',
#     'Node',
#     'Window',
# ] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
